# gURL

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  init.sql
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.docker-setup/: .env.example  Dockerfile  README.md  compose.yaml  init.sql  startup.sh
public/css/: globals.css  home.css
public/js/: global.js  home.js  login.js  profile.js  signup.js
src/: lib.rs  main.rs  router.rs
src/handlers/: grpcurl.rs  mod.rs  render.rs  request.rs  template.rs  user.rs
src/models/: mod.rs  request.rs  user.rs
src/utils/: auth.rs  db.rs  env.rs  mod.rs
templates/: components.html  index.html  sections.html
tests/: main.rs
