[package]
name = "gURL"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "deny"
future_incompatible = { level = "deny", priority = -1 }
meta_variable_misuse = "warn"
missing_debug_implementations = "warn"
noop_method_call = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_macro_rules = "warn"
variant_size_differences = "warn"

[lints.clippy]
default_union_representation = "deny"
exit = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
mut_mut = "deny"
ptr_as_ptr = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
wildcard_dependencies = "deny"
dbg_macro = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
match_same_arms = "warn"
no_effect_underscore_binding = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
same_name_method = "warn"
single_char_lifetime_names = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
used_underscore_binding = "warn"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
cargo-husky = { version = "1.5.0", features = ["user-hooks"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
miette = { version = "7.6.0", features = ["fancy"] }
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.13.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.15.0"
regex = "1.11.1"
